teoria justicia CMM

--- a/src/analytics/test_1/test_1.ipynb
+++ b/src/analytics/test_1/test_1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "096b77c1",
    "metadata": {},
    "outputs": [
@@ -43,12 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g++ -c -Wall tp1.cpp -o tp1.o\n",
-      "g++ -c -Wall partido.cpp -o partido.o\n",
-      "g++ -c -Wall winPercentage.cpp -o winPercentage.o\n",
-      "g++ -c -Wall colleyMatrix.cpp -o colleyMatrix.o\n",
-      "g++ -c -Wall ratingIndex.cpp -o ratingIndex.o\n",
-      "g++ -Wall tp1.o partido.o winPercentage.o colleyMatrix.o ratingIndex.o -o tp1\n"
+      "make: Nothing to be done for 'all'.\n"
      ]
     },
     {
@@ -57,7 +52,7 @@
        "CompletedProcess(args=['make'], returncode=0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d47cafbe",
    "metadata": {},
    "outputs": [
@@ -78,7 +73,7 @@
        "CompletedProcess(args=['./tp1', '/home/lucas/Desktop/MetNum/TP/metnum_tp1/src/tests/test1.in', '/home/lucas/Desktop/MetNum/TP/metnum_tp1/src/analytics/test_1/result_test1.out', '0'], returncode=0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
