--- a/src/analytics/justicia_CMM/justicia_CMM.ipynb
+++ b/src/analytics/justicia_CMM/justicia_CMM.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "ddb0cda2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
-    "import pathlib"
+    "import pathlib\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e1442d6d",
+   "execution_count": 15,
+   "id": "ffd7f092",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +32,7 @@
        "CompletedProcess(args=['make'], returncode=0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,17 +44,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "2b032255",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8, 3],\n",
+       "       [5, 0],\n",
+       "       [7, 4],\n",
+       "       [3, 1],\n",
+       "       [5, 1],\n",
+       "       [4, 2],\n",
+       "       [2, 0],\n",
+       "       [8, 0],\n",
+       "       [5, 3],\n",
+       "       [4, 2]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Creo tablas\n",
+    "cant_participantes = 6\n",
+    "cant_partidos = 10\n",
+    "\n",
+    "partidos = np.array([np.random.choice(cant_participantes, 2, replace = False) for x in range(cant_partidos)])\n",
+    "puntos = np.array([[x,np.random.randint(x-1)] for x in np.random.randint(1,10, cant_partidos)])\n",
+    "puntos"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d352662b",
+   "id": "d94f3dc5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Corre test\n",
-    "tabla_path = \"/tests/test1.in\"\n",
-    "res_path = \"/analytics/test_1/result_test1.out\"\n",
+    "local_path = str(pathlib.Path().resolve())\n",
+    "tabla_path = \"/test1.in\"\n",
+    "res_path = \"/result_test1.out\"\n",
     "\n",
-    "subprocess.run([\"./tp1\", src_path + tabla_path, \n",
-    "                         src_path + res_path, \n",
+    "subprocess.run([\"./tp1\", local_path + tabla_path, \n",
+    "                         local_path + res_path, \n",
     "                           \"0\"], \n",
     "               cwd = src_path + \"/cpp\")"
    ]
