--- a/src/analytics/justicia_CMM/justicia_CMM.ipynb
+++ b/src/analytics/justicia_CMM/justicia_CMM.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2da031f",
+   "id": "9f619cb1",
    "metadata": {},
    "source": [
     "# Experimento (1)"
@@ -53,13 +53,18 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "dcebcd3f",
+   "id": "07e29773",
    "metadata": {},
    "outputs": [],
    "source": [
     "def crear_competencia(cant_participantes, cant_partidos):\n",
+    "    # dada una cantidad de participante y de partidos\n",
+    "    # crea 4 np array:\n",
+    "    # lista de ganadores de cada partido\n",
+    "    # lista de perdedores de cada partido\n",
+    "    # lista de 1's(puntaje de los ganadores)\n",
+    "    # lista de 0's(puntaje de los perdedores)\n",
     "    \n",
-    "    #Creo ganadores y perdedores al azar\n",
     "    ganadores = np.random.choice(cant_participantes, cant_partidos, replace = True)\n",
     "\n",
     "    perdedores = np.array([])\n",
@@ -77,6 +82,10 @@
     "    return ganadores+1, perdedores+1, puntajeG, puntajeP\n",
     "\n",
     "def escribir_tabla(file_name, cant_participantes, cant_partidos, g, p, pg, pp):\n",
+    "    # dada 4 listas: lista de ganadores, perdedores, \n",
+    "    # puntaje ganadores y puntaje perdedores,\n",
+    "    # y dado la cantidad de participantes y de partidos, junto a un nombre de archivo\n",
+    "    # genera el archivo \"file_name\" con la tabla de la competencia(formato enunciado)\n",
     "    \n",
     "    with open(file_name,\"w\") as file:\n",
     "    \n",
@@ -140,12 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "4c5330a6",
+   "execution_count": 123,
+   "id": "e689b4fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def leer_ranking(file_name):\n",
+    "    # Dada la direccion de un archivo con el ranking\n",
+    "    # resultado de una competencia, devuelve un arreglo\n",
+    "    # con el rating ordenado por numero de competidor\n",
     "    \n",
     "    with open(file_name, \"r\") as file:\n",
     "        \n",
@@ -171,21 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "ad703677",
+   "execution_count": 124,
+   "id": "a940c529",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_24669/3453657626.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mleer_ranking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"res_1_e6_p10.out\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_24669/1328063386.py\u001b[0m in \u001b[0;36mleer_ranking\u001b[0;34m(file_name)\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0.378403, 0.741379, 0.582577, 0.38294 , 0.626134, 0.288566])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c0083c4",
+   "id": "e297ea0a",
    "metadata": {},
    "outputs": [],
    "source": []
